// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Compilation Snapshots > snapshot: chained whereConnectedTo 1`] = `
{
  "cypher": "MATCH (n0:Folder)
WHERE (n0)-[:hasParent]->({id: $p0}) AND n0.name = $p1
RETURN n0",
  "meta": {
    "complexity": 1,
    "hasAggregation": false,
    "hasVariableLengthPath": false,
    "matchCount": 1,
    "returnAliases": undefined,
  },
  "params": {
    "p0": "parent_123",
    "p1": "test",
  },
  "resultType": "collection",
}
`;

exports[`Compilation Snapshots > snapshot: simple whereConnectedTo 1`] = `
{
  "cypher": "MATCH (n0:Post)
WHERE (n0)-[:categorizedAs]->({id: $p0})
RETURN n0",
  "meta": {
    "complexity": 1,
    "hasAggregation": false,
    "hasVariableLengthPath": false,
    "matchCount": 1,
    "returnAliases": undefined,
  },
  "params": {
    "p0": "cat_123",
  },
  "resultType": "collection",
}
`;

exports[`Compilation Snapshots > snapshot: whereConnectedFrom 1`] = `
{
  "cypher": "MATCH (n0:Category)
WHERE (n0)<-[:categorizedAs]-({id: $p0})
RETURN n0",
  "meta": {
    "complexity": 1,
    "hasAggregation": false,
    "hasVariableLengthPath": false,
    "matchCount": 1,
    "returnAliases": undefined,
  },
  "params": {
    "p0": "post_123",
  },
  "resultType": "collection",
}
`;
